@@ -32,7 +32,7 @@ public class GameService {
     private final LogService logService;
     private final WebClientService webClientService;
     private final GameRepository gameRepository;
-    private final ChessEngine chessEngine;
+    private final ChessEngineService chessEngineService;
 
     @Transactional
     @CircuitBreaker(name = "user-service", fallbackMethod = "fallback")
@@ -52,15 +52,11 @@ public class GameService {
 
     public List<GameResponse> getAllGamesForUser(String username) {
         List<Game> optionalGames = gameRepository.findByPlayersUsernameAndHistoryStatusIsNotIn(username,List.of("CHECKMATE","PAT"));
-        List<GameResponse> games = new ArrayList<>();
-        for (Game game:optionalGames) {
-            games.add(GameResponse.builder()
-                    .id(game.getId()).actualColor(game.getActualColor())
-                    .players(game.getPlayers())
-                    .history(game.getHistory())
-                    .build());
-        }
-        return games;
+        return optionalGames.stream().map(game -> GameResponse.builder()
+                .id(game.getId())
+                .actualColor(game.getActualColor())
+                .players(game.getPlayers())
+                .history(game.getHistory()).build()).toList();
     }
 
     public GameResponse getGame(String gameId) {
@@ -82,113 +78,45 @@ public class GameService {
         Optional<Game> optionalGame = gameRepository.findById(safeGameStateRequest.getGameId());
         if (optionalGame.isPresent()) {
             Game game = optionalGame.get();
-            PlayerColor opponentColor  = game.getActualColor() == PlayerColor.WHITE ? PlayerColor.BLACK :PlayerColor.WHITE;
-            GameState gameState = GameState.builder()
-                    .boardState(safeGameStateRequest.getBoardState())
-                    .status( safeGameStateRequest.getGameStatus())
-                    .move(safeGameStateRequest.getMove())
-                    .castleTypes(safeGameStateRequest.getCastleTypes())
-                    .possibleMoves(getPossiblesMoves(safeGameStateRequest.getBoardState(),opponentColor, safeGameStateRequest.getCastleTypes()))
-                    .fullMovesCounter(safeGameStateRequest.getFullMovesCounter())
-                    .halfMovesCounter(safeGameStateRequest.getHalfMovesCounter())
-                    .enPassantPosition(safeGameStateRequest.getEnPassantPosition())
-                    .build();
-
             PlayerColor actualColor = (game.getActualColor().equals(PlayerColor.WHITE)) ? PlayerColor.BLACK : PlayerColor.WHITE;
+            GameState gameState = createGameState(safeGameStateRequest, actualColor);
             game.setActualColor(actualColor);
             game.addGameStateToHistory(gameState);
             gameRepository.save(game);
         }
     }
-    public List<String> getMovesHistory(String gameId){
+
+    private GameState createGameState(SafeGameStateRequest safeGameStateRequest, PlayerColor actualColor) {
+        return GameState.builder()
+                .boardState(safeGameStateRequest.getBoardState())
+                .status(safeGameStateRequest.getGameStatus())
+                .move(safeGameStateRequest.getMove())
+                .castleTypes(safeGameStateRequest.getCastleTypes())
+                .possibleMoves(chessEngineService.getPossiblesMoves(safeGameStateRequest.getBoardState(), actualColor, safeGameStateRequest.getEnPassantPosition(),safeGameStateRequest.getCastleTypes()))
+                .fullMovesCounter(safeGameStateRequest.getFullMovesCounter())
+                .halfMovesCounter(safeGameStateRequest.getHalfMovesCounter())
+                .enPassantPosition(safeGameStateRequest.getEnPassantPosition())
+                .build();
+    }
+
+    public List<String> getMovesHistory(String gameId) {
         Optional<Game> optionalGame = gameRepository.findById(gameId);
-
-        if(optionalGame.isPresent()) {
-            Game game = optionalGame.get();
-
-            return game.getHistory().stream()
-                    .skip(1)
-                    .map(gameState -> gameState.getMove().getEndingCoordinates())
-                    .toList();
-        }
-
-        //todo
-        return null;
+        return optionalGame.map(game -> game.getHistory().stream()
+                        .skip(1)
+                        .map(gameState -> gameState.getMove().getEndingCoordinates())
+                        .collect(Collectors.toList()))
+                .orElse(null);
     }
 
     public void updateGameState(MoveRequest moveRequest) {
         Optional<Game> optionalGame = gameRepository.findById(moveRequest.getGameId());
         if (optionalGame.isPresent()){
             Game game = optionalGame.get();
-            GameState gameState = game.getHistory().get(game.getHistory().size()-1);
-            List<String> castletypes = game.getHistory().get(game.getHistory().size()-1).getCastleTypes();
-            if (IsValidMove(gameState.getPossibleMoves(),moveRequest.getMove())){
-                String updatedBoardState = updateBoardState(gameState.getBoardState(),moveRequest.getMove());
-                List<String> updatedCastleType = calculateCastle(castletypes,moveRequest.getMove().getStartingCoordinates());
-                safeGameState(SafeGameStateRequest.builder()
-                        .gameId(moveRequest.getGameId())
-                        .gameStatus(convertStatus(getGameStatus(updatedBoardState,gameState.getCastleTypes(),game.getActualColor().toString())))
-                        .move(moveRequest.getMove())
-                        .castleTypes(updatedCastleType)
-                        .boardState(updatedBoardState)
-                        .enPassantPosition( "todo")
-                        .halfMovesCounter(calculateHalfMoves(gameState.getHalfMovesCounter()))
-                        .fullMovesCounter(gameState.getFullMovesCounter()+1)
-                        .build());
-            }
+            SafeGameStateRequest safeGameStateRequest = chessEngineService.getUpdatedSafeGameStateRequest(moveRequest, game);
+            safeGameState(safeGameStateRequest);
         }
     }
 
-    private int calculateHalfMoves(int halfMovesCounter) {
-        return halfMovesCounter+1;
-    }
-
-    private String updateBoardState(String boardState, Move move) {
-        Board board = new Board();
-        board.setBoardState(boardState,"");
-        Spot[][] spots = board.getSpots();
-        Position startPosition = convertCoordinatestoPosition(move.getStartingCoordinates());
-        Position endPosition = convertCoordinatestoPosition(move.getEndingCoordinates());
-        Spot spot = spots[startPosition.getX()][startPosition.getY()];
-        spots[endPosition.getX()][endPosition.getY()].setPiece(spot.getPiece());
-        spot.setPiece(null);
-        return board.spotsToBoardState();
-    }
-
-    private boolean IsValidMove(Set<PossibleMove> possibleMoves, Move move) {
-        Position startPosition = convertCoordinatestoPosition(move.getStartingCoordinates());
-        Position endPosition = convertCoordinatestoPosition(move.getEndingCoordinates());
-        return possibleMoves.stream()
-                .anyMatch(possibleMove ->
-                        possibleMove.piecePosition().getX() == startPosition.getX() && possibleMove.piecePosition().getY() == startPosition.getY()
-                                &&
-                                possibleMove.possibleMovesForPiece().stream()
-                                        .anyMatch(position ->
-                                                position.getX() == endPosition.getX() && position.getY() == endPosition.getY()));
-
-    }
-
-
-    private   Position convertCoordinatestoPosition(String coordinates) {
-        int x = Integer.parseInt(coordinates.substring(1)) - 1;
-        int y = coordinates.toUpperCase().charAt(0) - 'A'; // Przyjmując, że pozycje są w formie "A1", "B2", itp.
-        return new Position(x,y);
-    }
-
-    private Set<PossibleMove> getPossiblesMoves( String boardState, PlayerColor playerColor, List<String> castles) {
-        String convertedCastlesToString = convertCastlesToString(castles);
-        Map<Position, List<Position>> allPossiblePosition = chessEngine.getAllPossibleMovesForColor(boardState,playerColor.name(),convertedCastlesToString);
-        return  allPossiblePosition.entrySet().stream()
-                .map(entry -> new PossibleMove(entry.getKey(), entry.getValue()))
-                .collect(Collectors.toSet());
-    }
-    private String getGameStatus(String boardState,List<String> castles,String playerColor) {
-        String convertCastles = convertCastlesToString(castles);
-//        System.out.println(boardState);
-//        System.out.println(castles);
-//        System.out.println(playerColor);
-        return chessEngine.getGameStatus(boardState, convertCastles, playerColor);
-    }
     private String convertToGameResponseAsJson(GameResponse gameResponse) {
         ObjectMapper objectMapper = new ObjectMapper();
         try {
@@ -198,51 +126,35 @@ public class GameService {
             return null;
         }
     }
-
-    private List<String> calculateCastle(List<String> castleTypes, String startingCoordinates) {
-        switch (startingCoordinates) {
-            case "a1" -> castleTypes.remove("q");
-            case "h1" -> castleTypes.remove("k");
-            case "a8" -> castleTypes.remove("K");
-            case "h8" -> castleTypes.remove("Q");
-            case "e1" -> castleTypes.removeAll(List.of("k", "q"));
-            case "e8" -> castleTypes.removeAll(List.of("K", "Q"));
-        }
-        return castleTypes;
-    }
     private Game createDefaulttdGame(Player firstPlayer,Player secondPlayer){
-        int defaultMovesValue = 0;
-        String defaultBoardState = "rnbqkbnr/pppppppp/8/8/8/8/PPPPPPPP/RNBQKBNR";
-        List<String> defaultCastleTypes = List.of(CastleType.LONGWHITE.getValue(),
-                CastleType.SHORTWHITE.getValue(),
-                CastleType.LONGBLACK.getValue(),
-                CastleType.SHORTBLACK.getValue());
-
-        GameState defaultGameState = GameState.builder()
-                .boardState(defaultBoardState)
-                .status(GameStatus.GAME)
-                .possibleMoves(getPossiblesMoves(defaultBoardState,PlayerColor.WHITE,defaultCastleTypes))
-                .castleTypes(defaultCastleTypes)
-                .halfMovesCounter(defaultMovesValue)
-                .fullMovesCounter(defaultMovesValue)
-                .enPassantPosition("")
-                .build();
-
+        GameState defaultGameState = createDefaulGameState();
         return Game.builder()
                 .players(new Player[]{firstPlayer, secondPlayer})
                 .history(List.of(defaultGameState))
                 .actualColor(PlayerColor.WHITE)
                 .build();
     }
-    private String convertCastlesToString(List<String> castles){
-        return String.join("", castles);
+
+    private GameState createDefaulGameState() {
+        int defaultMovesValue = 0;
+        String defaultBoardState = "rnbqkbnr/pppppppp/8/8/8/8/PPPPPPPP/RNBQKBNR";
+        List<String> defaultCastleTypes = createDefaultCastleType();
+        return GameState.builder()
+                .boardState(defaultBoardState)
+                .status(GameStatus.GAME)
+                .possibleMoves(chessEngineService.getPossiblesMoves(defaultBoardState,PlayerColor.WHITE,"", defaultCastleTypes))
+                .castleTypes(defaultCastleTypes)
+                .halfMovesCounter(defaultMovesValue)
+                .fullMovesCounter(defaultMovesValue)
+                .enPassantPosition("")
+                .build();
     }
 
-    private GameStatus convertStatus(String status){
-        return Objects.equals(status, "Checkmate") ? GameStatus.CHECKMATE :
-                Objects.equals(status, "Pat") ? GameStatus.PAT :
-                        GameStatus.GAME;
-
+    private static List<String> createDefaultCastleType() {
+        return List.of(CastleType.LONGWHITE.getValue(),
+                CastleType.SHORTWHITE.getValue(),
+                CastleType.LONGBLACK.getValue(),
+                CastleType.SHORTBLACK.getValue());
     }
 
     private String fallback(NewGameRequest request, RuntimeException e) {
